src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__interaction_log__interaction_lifecycle_log_sequence_full_session.snap
---
source: src/tui/snapshot_tests/interaction_log.rs
expression: terminal.backend()
---
"╔═══════════════════════════════════════════════════[ Activity Log ]═══════════════════════════════════════════════════╗"
"║HH:MM:SS [INTERACTION] #42 launched (mode: produce_pr=true, interaction=true, transport=interactive)                  ║"
"║HH:MM:SS [INTERACTION] #42 turn 1: 12 chunks streamed (1430 ms)                                                       ║"
"║HH:MM:SS [INTERACTION] #42 resumed                                                                                    ║"
"║HH:MM:SS [INTERACTION] #42 closing (reason: PrCreated #7); wiping worktree                                            ║"
"║HH:MM:SS [TEARDOWN] #42 worktree removed at /tmp/maestro/issue-42; branch deleted                                     ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"╚══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝"
